SSO-main/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sso-demo
  labels:
    name: sso-demo
