SSO-main/k8s/spring-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-app
  namespace: sso-demo
  labels:
    app: spring-app
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: spring-app
  type: ClusterIP
