SSO-main/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sso-demo-ingress
  namespace: sso-demo
  annotations:
    kubernetes.io/ingress.class: "nginx" 
spec:
  rules:
    - host: sso-demo.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spring-app
                port:
                  number: 80
  tls: []
